--- a/crates/repl/Cargo.toml
+++ b/crates/repl/Cargo.toml
@@ -11,3 +11,4 @@ ast = { path = "../ast" }
 parser = { path = "../parser" }
 evaluator = { path = "../evaluator" }
 object = { path = "../object" }
+utils = { path = "../utils" }
