--- a/crates/runner/Cargo.toml
+++ b/crates/runner/Cargo.toml
@@ -14,4 +14,5 @@ ast = { path = "../ast" }
 parser = { path = "../parser" }
 evaluator = { path = "../evaluator" }
 object = { path = "../object" }
+utils = { path = "../utils" }
 wasm-bindgen = { workspace = true }
