--- a/crates/token/Cargo.toml
+++ b/crates/token/Cargo.toml
@@ -3,3 +3,6 @@ name = "token"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+
+[dependencies]
+utils = { path="../utils" }
